# app/Http/Controllers/AuthController.php
@@ -8,37 +8,6 @@ use Illuminate\Http\Request;
 class AuthController extends Controller
 {
 
-    /**
-     * @OA\Post(
-     *     path="/api/account/login/",
-     *     summary="Log in to the application",
-     *     tags={"Session"},
-     *     @OA\RequestBody(
-     *         required=true,
-     *         @OA\JsonContent(
-     *             required={"email", "password"},
-     *             @OA\Property(property="email", type="string", format="email", example="user@example.com"),
-     *             @OA\Property(property="password", type="string", format="password", example="password"),
-     *         ),
-     *     ),
-     *     @OA\Response(
-     *         response="200",
-     *         description="Returns authentication token",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="access_token", type="string"),
-     *             @OA\Property(property="token_type", type="string", example="bearer"),
-     *             @OA\Property(property="expires_in", type="integer"),
-     *         ),
-     *     ),
-     *     @OA\Response(
-     *         response="401",
-     *         description="Unauthorized",
-     *         @OA\JsonContent(
-     *             @OA\Property(property="error", type="string", example="Unauthorized"),
-     *         ),
-     *     ),
-     * )
-     */
     public function login()
     {
         $credentials = request(['email', 'password']);
